Bug 661456 - Scale WebM video frames to display size. r=kinetik